New files added

--- a/Machigan - [EECS 498-007, 598-005]/02. Image Classification.md
+++ b/Machigan - [EECS 498-007, 598-005]/02. Image Classification.md
@@ -4,3 +4,115 @@
 https://www.youtube.com/watch?v=0nqvO3AM2Vw&list=PL5-TkQAfAZFbzxjBHtzdVCWE0Zbhomg7r&index=2
 
 **`강의 자료`** https://web.eecs.umich.edu/~justincj/slides/eecs498/498_FA2019_lecture02.pdf
+
+# Image Classification
+
+> `Image`를 입력으로 받아, category 중 하나로 분류하는 것
+
+![alt text](image.png)
+
+## **문제점**
+`Semantic Gap`
+- 사람은 직관적으로 수 많은 정보를 처리하고, 분류하는 능력을 가진다.
+- 하지만 Computer는 **Image를 단지 [0, 255] 사이의 숫자를 가진 2차원 배열 형태로 인식한다.**
+- 따라서 Image Classification을 위해선 이러한 `grid of numbers`를 구분하기 위한 `복잡한 알고리즘`이 필요하다.
+
+## **Challenges**
+> `grid of numbers`를 구분하기 위한 알고리즘을 잘 만들었다고 하더라도, **단순한 이미지의 변경은 해당 Image를 구성하는 숫자를 변경하며, 이는 알고리즘의 결과에도 영향**을 미친다. 
+
+`Viewpoint Variation`
+
+![alt text](image-2.png)
+  - 정확히 같은 물체를 다른 시점에서 찍더라도, 컴퓨터가 이를 같은 물체라고 판단하는 것은 쉽지 않다.
+  
+`Intraclass Variation`
+
+![alt text](image-1.png)
+  - 같은 Category 내에서 줄무늬 등, 세부적인 부분이 다른 경우
+
+`Fine-Grained Categories`
+
+![alt text](image-3.png)
+  - 큰 Category 내에서 세부적으로 분류해야 하는 경우
+
+`Background Clutter`
+
+![alt text](image-4.png)
+  - 객체와 배경색이 유사한 경우
+
+`Illumination Changes`
+
+![alt text](image-5.png)
+  - 같은 객체에 대해 조명 조건이 달라지는 경우
+
+`Deformation`
+
+![alt text](image-6.png)
+  - 같은 객체가 다른 형태, 자세를 가지는 경우
+
+`Occlusion`
+
+![alt text](image-7.png)
+  - 이미지에서 객체가 잘 보이지 않는 경우
+  - 가장 오른쪽의 이미지에서 사람은 고양이라고 당연하게 인식할 수 있다는 점이 중요하다.
+
+## **Goal**
+> **Robust Algorithm**이 필요하다.
+- **`pixel value`의 변화에도 불구하고 물체를 구별할 수 있는 알고리즘**이 필요하다.
+  
+
+`Image Classification`은 `Image Captioning`, `Object Detection`, `Playing go` 등의 하위 기술으로 사용되기 때문에, 굉장히 중요하다.
+
+# Image Classifier
+
+```python
+def classify_image(image):
+    # Some magic here?
+    return class_label
+```
+
+우리는 `Image Classification`을 위해, 위와 같이 `2D grid`를 입력 받아 `class label`을 반환하는 함수를 작성해야 한다.
+
+하지만, 큰 사이즈의 2D grid를 처리해 label로 반환하는 알고리즘을 구현하는 명확한 코드는 존재하지 않는다.
+
+따라서 **사람이 사진 속 객체를 인식하는 방법**에 기반하여 코드를 작성하는 것이 좋다.
+
+![alt text](image-8.png)
+
+가장 먼저 실행해볼 수 있는 방법은 Computer Vision 역사에서 `특징점`으로 사용되었던 `Edge`에서 해석 가능한 패턴을 찾는 방법이다.
+
+`Human knowledge`에 기반하여, 사람이 어떤 패턴에 반응하여 물체를 구별하는 지를 알고리즘으로 구현할 수 잇다.
+
+하지만, 우리의 예상과 다른 형태의 객체가 있거나, Edge detecting에 실패하는 등의 문제점이 존재한다.
+
+추가로, 특정 객체에 대해서만 알고리즘이 동작하기에 `확장 가능성`이 부족하다.
+
+![alt text](image-9.png)
+
+위에서 본 방법은 단점이 명확하다. 
+
+우리는 다른 방법으로 `Machine Laerning`, `Data-Driven Approach`을 이용할 수 있다.
+
+과정은 아래와 같다.
+1. Dataset을 모으고, Labeling을 한다.
+2. Classifier를 Train하기 위해 Machine Learning을 이용한다.
+3. 기존 Dataset에 없는 개로운 이미지를 활용해 Classifier를 평가한다.
+
+이 방법을 이용하게 되면, 우리는 새로운 객체에 대한 분류기를 만들 때 **Code를 수정할 필요없이 해당 객체에 대한 Dataset을 제공**하면 된다.
+
+# DataSet
+
+`MNIST`: 숫자 필기체 데이터셋
+
+![alt text](image-10.png)
+
+`CIFAR10`
+
+![alt text](image-11.png)
+
+`CIFAR100`
+
+![alt text](image-12.png)
+
+`ImageNet`
+
