--- a/Machigan - [EECS 498-007, 598-005]/02. Image Classification.md
+++ b/Machigan - [EECS 498-007, 598-005]/02. Image Classification.md
@@ -305,7 +305,24 @@ class NearestNeighbor:
 
 특히, 우주를 구성하는 입자의 개수가 $10^97$ 인 것에 비교하면 굉장히 큰 것을 확인할 수 있다.
 
+위처럼 많은 데이터를 얻지 못 하여, KNN을 사용하지 못 하는 경우도 있지만, KNN을 일반적으로 사용하기 힘든 이유가 있다.
 
+1. `Testing`에 너무 오랜 시간이 걸린다.
+
+2. `L1`, `L2 distance` metrics을 사용하게 되면 `Imformative`하지 못 하다.
+
+![alt text](image-29.png)
+
+| 변형 타입   | 방식               | 수학적 영향 (예시)                          |
+| ------- | ---------------- | ------------------------------------ |
+| Boxed   | 특정 영역을 0으로 (마스킹) | 몇몇 픽셀만 큰 차이 (예: 50개 픽셀에서 255 차이)     |
+| Shifted | 전체 이미지를 한두 칸 이동  | 많은 픽셀에 작은 차이 발생 (예: 1000개 픽셀에서 8 차이) |
+| Tinted  | 전체 색조를 일정량 더함    | 전체 픽셀에 균일한 변화 (예: 모든 픽셀에 +30씩 더함)    |
+
+  - `L2 distance`를 사용하면 Original image로부터 나머지 세 개의 이미지가 모두 같은 distance를 갖게 된다.
+  - L1, L2 distance는 pixel 간의 값의 차이를 계산하는데, 위 세 이미지의 경우 pixel 값의 차이가 같도록 조정되어 같은 이미지로 분류된다. 
+
+___ 
 이러한 경우를 다 무시하고, KNN이 압도적인 성능을 보이는 경우가 존재한다.
 
 **KNN을 `ConvNet`과 함께 사용하는 경우 성능이 굉장히 좋다.**
