--- a/Machigan - [EECS 498-007, 598-005]/02. Image Classification.md
+++ b/Machigan - [EECS 498-007, 598-005]/02. Image Classification.md
@@ -136,7 +136,7 @@ def classify_image(image):
 - 적은 수의 데이터로 학습이 가능하도록 한다.
 
 # Classifier Algorithm
-> 알고리즘을 구현할 때, 우리는 `train` 부분과 `predict` 부분으로 나누어 구현할 수 있다. 아래 설명하는 알고리즘 모두 두 부분으로 나누어 설명할 것이다.
+> 알고리즘을 구현할 때, 우리는 `train` 부분과 `predict` 부분으로 나누어 구현할 수 있다. 아래 설명하는 `Nearest Neighbor` 알고리즘 역시 두 부분으로 나누어 설명할 것이다.
 
 
 ## Nearest Neighbor
@@ -193,7 +193,7 @@ class NearestNeighbor:
 
 ![alt text](image-17.png)
 
-- 빨간색 테두리가 칠해진 이미지 같이, `L1 distance`를 사용하게 되면 실제 정답 대신 유사한 이미지가 선택되는 경우가 많다.
+- 빨간색 테두리가 칠해진 이미지 같이, `L1 distance`를 사용하게 되면 실제 정답 대신 유사한 다른 이미지가 선택되는 경우가 많다.
 
 좀 더 자세히 살펴보기 위해, `Nearest Neighbor`의 `Decision Boundary`를 확인해보자.
 
