--- a/Machigan - [EECS 498-007, 598-005]/03. Linear Classifiers.md
+++ b/Machigan - [EECS 498-007, 598-005]/03. Linear Classifiers.md
@@ -71,7 +71,7 @@ https://web.eecs.umich.edu/~justincj/slides/eecs498/498_FA2019_lecture03.pdf
 하지만 **인간은 이미지가 0.5배 흐릿해진다고 해서, 예측 점수를 수정하지 않는다.**
 - 이미지가 흐리더라도, 위 이미지 속 객체가 고양이라는 믿음을 변화시키지 않는다.
 
-이러한 **선형적인 특징**은 `Linear classifier`에서 어떤 `Loss function`을 사용하는지에 따라 좋지 않은 영향을 끼칠 수도 있다. 
+이러한 **`선형적인 특징`은 `Linear classifier`에서 어떤 `Loss function`을 사용하는지에 따라 좋지 않은 영향을 끼칠 수도 있다.**
 
 ## Second Viewpoint of Linear Classifier
 
@@ -363,7 +363,7 @@ Loss를 계산해보면, 위의 예시에서 정답 Class는 고양이이므로 
 
 오른쪽 Vector는 정답 Class를 `One-hot vector`로 나타낸 것이다.
 
-두 Vector의 차이를 확인하기 위해, 수학적으로 `Kullbakc-Leibler divergence`를 이용할 수 있다.
+두 Vector의 차이를 확인하기 위해, 수학적으로 `Kullback-Leibler divergence`를 이용할 수 있다.
 
 이를 이용해 `Cross-Entropy`를 구해보자.
 
@@ -375,7 +375,7 @@ $H(P)$ — **우리가 바꿀 수 없음**
 모델의 부정확성: 
 $D_{KL}(P∥Q)$ — **이걸 줄이기 위해 학습**
 
->**결국 위에서의 `Loss function`을 Minimize하는 것은 $D_{KL}(P∥Q)$을 Minimize 하는 것과 동일하다.**
+>**결국 정답 vector가 one-hot vector인 경우, 위에서의 `Negative log-likelihood loss function`을 Minimize하는 것은 $D_{KL}(P∥Q)$을 Minimize 하는 것과 동일하다.**
 - 이름이 `Cross Entropy loss`인 이유
 
 
@@ -397,7 +397,7 @@ $D_{KL}(P∥Q)$ — **이걸 줄이기 위해 학습**
 
 ![alt text](image-62.png)
 
-- SVM Loss와 달리 Cross-Entopy는 **잘못된 Class의 점수를 점점 낮추고 싶어하기 때문에 일 부분의 점수가 바뀌는 것의 영향이 크다.**
+- SVM Loss와 달리 Cross-Entopy는 **잘못된 Class의 점수를 점점 낮추고 싶어하기 때문에 일부분의 점수가 바뀌는 것의 영향이 크다.**
 
 ![alt text](image-63.png)
 
