--- a/Machigan - [EECS 498-007, 598-005]/04. Optimization.md
+++ b/Machigan - [EECS 498-007, 598-005]/04. Optimization.md
@@ -42,7 +42,7 @@ ___
 
 **첫 번째 방법**: `Random Search`
 
-> Gradient는 함수 값이 가장 빠르게 증가하는 방향을 나타내며, 특정 방향 벡터와의 **내적(dot product)을** 통해 그 방향으로의 기울기를 계산할 수 있다.
+> Random한 값의 Weight를 사용하며, 그 중 가장 좋은 값을 사용하는 방법
    
 ```python
 bestloss = float("inf")
@@ -473,6 +473,6 @@ for t in range(num_steps):
 `SGD + Momentum`이 `Adam`보다 더 좋은 성능을 낼 수 있지만,
 `하이퍼파라미터 튜닝`이 더 많이 필요할 수 있다.
 
-만약 **전체 배치 학습(full batch update)**이 가능하다면,
+만약 **전체 배치 학습(full batch update)이 가능하다**면,
 `L-BFGS`를 시도해보는 것도 좋다.
 (단, 모든 잡음 요소는 반드시 비활성화해야 한다.)
