New files added

--- a/Machigan - [EECS 498-007, 598-005]/05. Neural Networks.md
+++ b/Machigan - [EECS 498-007, 598-005]/05. Neural Networks.md
@@ -143,11 +143,13 @@ Linear Classifier의 문제점을 극복할 방법을 알아보자.
 
 - **두 번째 Layer의 가중치를 이용하여, Hidden Neuron 여러 개가 모여야(Recombining) 하나의 객체**가 명확해진다.
 
+    - Template을 재구성하여 시각적인 특징을 더 자세하게 표현한다.
+
 - 때문에 **여러 Template이 모여야 하나의 의미 있는 정보**가 형성되며, **각 Template이 어떤 특징을 나타내는지 확인하기 어렵다.**
 
 - Template을 사람이 해석하기 힘든 이유이며, 객체 대신 공간 정보 등이 담겨있을 수 있다.
 
-**Question)** 여러 중복되어 보이는 Template이 많은 이유?
+**Question)** **여러 중복되어 보이는 Template이 많은 이유?**
 
 - 사람은 처음에 **색상 대비 (빨간색 vs 파란색)** 또는 **Oriented Edge (수평, 수직 Edge)**에 집중하는 경향이 있고 Neural Network도 마찬가지이다.
 
@@ -213,7 +215,7 @@ for t in range(10000): # epoch: 10000
     w2 -= 1e-4 * dw2
 ```
 
-# Neural Term
+# 'Neural' Term
 
 > Deep Learning을 공부함에 있어 계속 Neural Network라는 단어가 나올 것이기 때문에 우리의 뇌와 신경이 동작하는 방식을 대강 아는 것은 도움이 된다.
 
@@ -249,3 +251,184 @@ for t in range(10000): # epoch: 10000
 # Space Warping
 
 > Neural Network가 왜 **강력한 시스템**으로 여겨지는지에 대한 이유
+
+먼저 $x$, $h$가 2차원인 `Linear Classifier`의 경우를 먼저 살펴보자.
+
+![alt text](image-109.png)
+
+- 이전 강의에서 봤던 것처럼, `Linear Classifier`에서 $x$ space에서 각 Class의 결정 경계는 법선 벡터가 $w$인 $w^Tx = 0$ 형태의 직선으로 나타났다.
+
+- 이를 $h$ space에 대해 나타내면, 정확히 사분면으로 표현된다.
+
+![alt text](image-110.png)
+
+- 하지만, **원래 공간에서 선형 분리되지 않으면, $h$ space에서도 선형 분리가 되지 않는다.**
+
+이제 `Linear Classifier`의 경우가 아니라, **`Activation Function`을 사용하는 경우**를 생각해보자.
+
+- `Hidden Layer` $h$ = ReLU($Wx$) = max(0, $Wx$) 
+
+![alt text](image-111.png) 
+- 위에서와 다르게, $h$에 **ReLU function**을 적용하면 $h1$ 과 $h2$가 음수인 부분은 모두 0이 된다.
+
+- 따라서 $h$ space에서 **2사분면**의 모든 데이터가 $h2$축 위에 나타나고 **4사분면**의 모든 데이터가 $h1$축 위에 나타난다.
+
+- **3사분면**의 모든 데이터는 원점 위에 나타난다.
+
+![alt text](image-112.png)
+
+- 데이터로 확인하면, $h$ space에서 위 사진과 같이 나타나며 선형 분리가 가능해짐을 알 수 있다.
+
+- $h$ space 위에서 `Linear Classifier`를 사용하여 선형 분리할 수 있다.
+
+![alt text](image-113.png)
+
+- $h$ space에서 `Linear Classifer`로 분류한 것을 원래의 $x$ space로 복구하면 그림과 같이 `Non-linear Classifier`를 얻을 수 있다.
+
+___
+
+`Hidden Neuron`의 개수를 늘릴수록 Non-linear boundary가 넓어지고 구체적이게 되는 것을 확인할 수 있다.
+- 모델이 **표현할 수 있는 함수 (Capacity)가** 늘어나게 된다.
+
+![alt text](image-114.png)
+
+- `Hidden Layer`의 수를 늘려도 마찬가지이다.
+
+하지만 `Hidden Neuron`의 개수를 너무 크게하면 **복잡하고, Overfitting의 위험이 존재함을 확인할 수 있다.**
+
+이를 방지하기 위해, `Hidden Layer`의 **size를 줄이는 것을 생각할 수 있다.**
+
+하지만, 대부분 `Hidden Layer`의 **size를 줄이는 것은 고려하지 않고, `Regularization term`을 사용한다.**
+
+- `Hidden Layer`의 size를 줄이면 `Capacity`가 줄어들기 때문이다. 
+
+![alt text](image-115.png)
+
+- `Regularization term`을 사용해서 일반화된 결과를 얻을 수 있다.
+
+> **비선형적이고, 복잡한 Dicision Boundary를 생성**할 수 있는 것을 보면, Neural Network가 얼마나 강력한 방법인지 확인할 수 있다.
+
+# Universal Approximation
+
+> 위에서 Neural Network가 복잡한 Dicision Boundary를 형성하는 과정을 공식화
+
+![alt text](image-116.png)
+
+> **Neural Network는 제한된 입력 공간에서 어느 연속 함수도 근사할 수 있다.** 
+
+### Example
+
+`2-Layer Neural Network using ReLU Fucntion` (R -> R)
+
+![alt text](image-117.png)
+
+$y = u_i * max(0, w_i * x + b_i)$을 그래프로 그려보자.
+
+![alt text](image-118.png)
+
+- 이 함수는 `Shifted / Scaled ReLU function`이라고 부른다.
+
+- $b_i$보다 작은 x에 대해서는 0이고 **기울기**는 결합 법칙에 따라 $u_i * w_i$이다.
+
+- 현재 그래프 $b_i$은 음수, 기울기도 음수처럼 그려졌는데 값에 따라 다르게 그려진다.
+
+이 예시에서는 `Bump function`도 사용한다.
+
+![alt text](image-119.png)
+
+- $m1, m2$는 기울기이다.
+- 위 함수 모양처럼 생긴 함수를 `Bump function`이라고 한다.
+
+아래 4개의 `Shifted / Scaled ReLU function`의 합으로 하나의 `Bump function`을 구성할 수 있다.
+
+![alt text](image-120.png)
+
+과정은 다음과 같다.
+
+![alt text](image-121.png)
+
+즉, 4K개의 `Hidden unit`으로 **원하는 위치와 높이에 K개의 `Bump`를 놓을 수 있다면, 어떤 함수라도 표현할 수 있다.**
+
+![alt text](image-123.png)
+
+- 더 좋은 근사를 위해서는 각 `Bump`의 간격을 더 좁게 만들 필요가 있다.
+
+- 이를 위해선 **더 Deep한 Neural Network를 통해 더 많은 `Hidden Unit`과 `Hidden Layer`을 만들어야 한다.**
+
+> **그러나 현실에서는 Neural Network가 실제 Bumps를 학습하는 것이 아니기 때문에 완벽하게 모든 함수를 표현하진 못 한다.**
+
+- 실제로 모델이 학습하는 것은 `Bumps`가 아닌 **`ReLU Function`의 조합**이기 때문에 완벽한 표현은 어렵다.
+
+- 실제로 특정 함수를 Neural Network가 완벽하게 표현하기 위한 **`Hidden Unit의 개수`나 `Training Data의 개수`를 완벽하게 지정할 수 없다.**
+
+> `Universal Approximation`은 신경망이 **충분한 너비와 적절한 가중치 설정을 통해 임의의 연속 함수를 임의의 정밀도로 근사**할 수 있다는 사실만을 보장한다.
+
+# 최적화 방법
+
+> Neural Network가 수렴함을 확인할 수 있을까?
+
+## Convex Functions 
+
+정의는 아래와 같다.
+
+![alt text](image-124.png)
+
+- $t$는 0과 1사이의 값이다.
+
+- **두 점 사이의 점을 $f$에 넣었을 때의 값이, 두 점을 이은 선보다 항상 아래**에 있으면 `Convex function`이라고 한다. 
+
+### Example
+
+![alt text](image-125.png)
+
+![alt text](image-126.png)
+
+`Multi-dimension`에서 `Convex function`은 그릇 (Bowl) 모양을 가진다.
+
+![alt text](image-127.png)
+
+- `Multi-dimension`에서의 `Convex function`은 **최적화하기 쉽다**.
+- 이론적으로 **Global minimum으로 수렴함을 증명할 수 있다**는 것이 보장된다.
+____
+
+**`Linear Classifier`는 항상 `Convex function optimization problem`이다.**
+
+![alt text](image-128.png)
+
+- `softmax`, `svm` 등 loss function에 상관없이 `Linear Classifier`는 `Convex function`을 최적화 한다.
+
+- **항상 수렴이 보장**된다는 이 성질 때문에 종종 `Linear Classifer`가 더 선호되기도 한다. 
+
+___
+
+> **Neural Network 기반 시스템에서는 항상 수렴이 보장됨을 확인할 수 있는 방법이 없다.**
+
+- 신경망은 대부분 매우 고차원이기 때문이다.
+
+대신 경험적으로 **우리가 할 수 있는 것은 `Weight`에 따라 `Loss function`이 어떻게 변하게 될 지를 확인하는 방법**이 있다.
+
+`Loss function`을 시각화했을 때, 여러 가능성이 있다.
+
+대부분의 경우 `Convex Function`처럼 보이게 된다.
+
+![alt text](image-129.png)
+
+하지만, `Convec Function`이 아닌 경우도 종종 발생한다.
+
+![alt text](image-130.png)
+
+언덕을 올라가야 하고, Local minimum까지 존재하는 최적화가 어려운 경우도 있다.
+
+![alt text](image-131.png)
+
+굉장히 wild한 경우도 존재한다.
+
+![alt text](image-132.png)
+
+> **따라서 Neural Network는 `Non-convex Optimization problem`이다.**
+
+- 항상 수렴한다는 이론적인 보장이 없다.
+  
+- 대신, 경험적으로 수렴한다고 생각할 수는 있다.
+  
+  - 어쨋든 작동하긴 한다. 
