New files added

--- a/Machigan - [EECS 498-007, 598-005]/07. Convolution Networks.md
+++ b/Machigan - [EECS 498-007, 598-005]/07. Convolution Networks.md
@@ -360,3 +360,196 @@ ___
 ## Summary
 
 ![alt text](image-222.png)
+
+# Convolutional Network
+
+`Convolution layer`와 `Pooling`을 이용하면, **전통적인 `Convolutional Network`**를 만들 수 있다.
+
+고전적인 `Convolutional Network`의 구성은 다음과 같다.
+
+![alt text](image-223.png)
+
+`LeNet-5`를 예시로 하여 더 자세하게 알아보자.
+
+## Example: LeNet-5
+
+데이터셋은 `CIFAR-10`을 사용한다고 가정한다.
+
+먼저 `input`에 대해 `convolution` 연산을 진행하고, `ReLU function`을 적용한다.
+
+![alt text](image-224.png)
+
+`Max pooling`을 적용한다.
+
+![alt text](image-225.png)
+
+위 두 작업을 한 번 더 반복하면 아래와 같은 상황이 된다.
+
+![alt text](image-226.png)
+
+이제 `Convolution layer`를 통과해서 나온 `Output`을 `Fully connected layer`에 넣기 전에, **Flatten 해야 한다.**
+
+![alt text](image-227.png)
+
+Flatten한 이후에는 `ReLU function`을 Activation function으로 사용하는 `Fully connected layer`에 통과시킨다.
+
+마지막 Layer는 10개 Class에 대한 Score를 생성하기 위한 Layer이다.
+
+![alt text](image-228.png)
+
+전체 과정을 진행하고 난 후에 과정을 정리해보면 아래와 같다.
+
+![alt text](image-229.png)
+
+- 일반적으로 Network를 통과하며 **Spatial size ($H, W$)는 감소한다.**
+
+- 일반적으로 Network를 통과하며 **Channel size는 늘어난다.**
+
+- `Volume` = $C \cdot H \cdot W$는 유지되거나 더 커진다.
+  - `Spatial size`의 감소를 `Channel size`를 늘림으로써 커버하여 **총 정보량은 보존**될 수 있도록 한다. 
+
+**Question) Max Pooling이 일종의 비선형성을 도입하는데 왜 ReLU까지 사용하는가?**
+
+**Answer)** 비선형성만을 고려하면 필요하지 않을 수도 있지만, Modern model에서는 **Max Pooling과 상관없이 ReLU를 사용**하는 추세이다. 
+
+위 고전적인 `Convolutional Network`는 문제점이 있다. 
+
+위 방법에 따라 설계하다 보면, **Network는 점점 더 Deep해지는데 `Training`과정에서 Model의 수렴성을 보장할 수가 없게** 된다.
+- 이 문제를 해결하기 위해 `Normalization`을 사용한다.
+
+
+# 3. Normalization
+
+> **Deep Network에서 더 쉽게 훈련할 수 있도록 추가하는 Layer**
+
+## Batch Normalization
+
+> **가장 일반적인 Normalization 방법으로, 이전 Layer의 Output을 받아서 해당 Output이 평균이 0, 표준 편차가 1인 분포가 되도록 Normalization 하는 방법**
+
+이 방법을 사용하는 이유는 `Internal Covariate shift`를 줄이기 위함이다.
+
+- 모델을 Training할 때, 한 Layer는 이전 Layer의 Output을 보고 있다.
+  
+- 모든 다른 `Weight Matrix`가 동시에 훈련되기 떄문에 이전 `Layer`의 **`Weight Matrix`가 최적화 과정에서 변경되면 다음 레이어의 출력 분포도 최적화 과정에서 변경**된다.
+
+- 이 때문에 두 번째 Layer가 학습시마다 **다른 분포의 입력을 받는다**는 것을 `Internal Covariate Shift`라고 한다.
+
+- `Internal Covariate Shift`는 최적화 측면에서 좋지는 않다.
+
+따라서 **특정 Layer에서의 입력의 분포가 변하지 않도록** **평균이 0, 표준편차가 1인 분포를 따르도록 강제**하기 위해서 `Batch Normalization`을 사용한다.
+
+아래 수식으로 정규화를 한다.
+
+![alt text](image-230.png)
+
+- $x^{(k)}$: 전체 데이터셋에서의 Sample 집합
+
+- Sample에 대해 **평균을 빼고 표준편차로 나눈다.**
+
+- 이 함수는 **Differentiable function**이다.
+
+- 즉, **미분이 가능하므로 Neural Network 내부에 넣을 수 있다.**
+
+실제 입력 $x$가 $N$: input size, $D$: input dimension 크기로 이루어졌다고 했을 때, 했을 때, 아래와 같이 평균과 표준편차를 계산할 수 있다.
+
+![alt text](image-231.png)
+
+- Batch 내에서의 **전체 이미지에 대한 평균, 표준편차를 계산**해야 하기 때문에, `Per-channel mean, std`를 구하는 것을 확인할 수 있다.
+
+**문제점 1)** 우리가 최적화을 효과적으로 하기 위해 입력 $x$가 **평균을 0, 표준편차를 1인 분포를 따르도록 강제하는 것은 생각보다 큰 제약**일 수 있다.
+
+따라서 정규화 이후에 Learnable `scale` and `shift parameters`를 추가하는 작업을 해준다.
+- 두개 모두 $D$-dimension이다.
+
+두 `Parameter`는 `Normalizationed output` $x_{hat}$에 적용된다.
+
+![alt text](image-232.png)
+
+$y_{i, j}$를 확인하면 `Network`가 스스로 `Scale`과 `shift`를 학습하여 입력 $x$를 **평균:0, 표준편차:1이 아닌 원하는 평균과 표준편차를 따르는 분포를 따르도록 만들 수 있다.**
+
+**문제점 2)** 아래에 보이는 현재 평균과 표준편차 계산 방식은 `Batch` **내에서** **서로의 이미지가 독립적이지 못 하고 다른 이미지에 대해 의존적이라는 문제점**을 가진다는 것을 확인할 수 있다.
+
+![alt text](image-233.png)
+
+- 기존에는 **Batch의 일부 이미지만 Input으로 들어와도 바로 Test를 수행하거나 결과**를 낼 수 있었다. 
+
+- `Batch Normalization`을 사용하면, Batch 안에 들어있는 **모든 이미지에 대해 평균을 내야하므로 Batch의 모든 이미지를 받아야 Test를 수행**하거나 결과를 낼 수 있다.
+
+- 이는 Real-time service 등에서 치명적이다.
+
+이를 해결하기 위해, 평균과 표준편차를 다른 방식으로 구한다.
+
+![alt text](image-234.png)
+
+**`Training` 과정에서 본 해당 Layer에서의 모든 평균과 표준편차를 `Exponential Averaging`하여 상수처럼 사용한다.**
+- Test시에는 그냥 이 상수를 사용한다.
+
+이렇게 Layer에서의 **모든 평균과 표준편차를 상수**처럼 만들면, Testing시 적은 시간이 소요되는 것 외에도 다른 장점이 존재한다.
+
+평균과 표준편차가 상수라면, **`Normalization` 과정은 `Linear`한 과정이 되고 `Convolution`도 `Linear`하기 때문에 두 과정을 따로 하는 것이 아니라 하나의 과정으로 합칠 수 있다.**
+
+- **두 `Linear Operation`은 하나의 `Linear Operation`으로 합칠** 수 있다.
+
+- 결국, **Test time의 Overhead가 0**이 된다.
+  
+`FC Network`에서 위 방법을 적용한 `Batch Normalization`이 어떻게 동작하는지 알아보자.
+
+![alt text](image-235.png)
+
+- 입력이 Vector이기 때문에, **Batch에 대해서만 평균**내면 된다.
+
+`Convolutional Network`에서 위 방법을 적용한 `Batch Normalization`이 어떻게 동작하는지 알아보자.
+
+![alt text](image-236.png)
+
+- **`Batch`와 `Spatial Dimension`에 대해 평균**을 내야한다.
+
+**일반적으로 `Batch Normalization`은 `FC / Convolutional Layer` 바로 뒤, `Activation function` 적용 이전에 사용하는 것이 일반적이다.**
+
+![alt text](image-237.png)
+
+### Batch Normalization의 장점
+
+아래와 같은 장점이 있다.
+
+![alt text](image-238.png)
+
+그래프로 확인했을 때, `Batch Normalization`을 적용한 모델이 훨씬 빠른 것을 확인할 수 있다.
+
+![alt text](image-239.png)
+
+### Batch Normalization의 단점
+
+![alt text](image-240.png)
+
+- `Training time`과 `Testing time`에 **다른 동작을 할 수도 있다는 것이 가장 큰 문제**이다.
+
+- **학습 / 테스트 데이터가 불균형한 경우**에 정규화 제약 조건을 두는 것이 오히려 비효율적일 수 있다.
+
+- Batch의 크기나 구성에 따라 결과가 달라질 수 있다.
+
+## Layer Normalization
+
+> **Batch Normalizatino이 "`Training time`과 `Testing time`에 **다른 동작을 할 수도 있다"라는 문제를 해결하기 위해 사용한다.**
+
+![alt text](image-241.png)
+
+가장 큰 차이점은 `Batch dimension`에 대해 평균 및 표준편차를 계산하는 것이 아니라, `Feature dimension`에 대해 평균 및 표준편차를 계산한다는 점이다.
+
+- 이미지간의 독립성이 보장되므로 `Training`과 `Test` 때 다른 결과를 유발할 가능성이 사라진다.
+
+## Instance Normalization
+
+> **Batch dimension에 대해서는 평균을 구하지 않고, Spatial dimension에 대해서만 평균을 구하는 방법**
+
+![alt text](image-242.png)
+
+- Batch dimension에 대해 평균 / 표준편차를 구하지 않기 때문에, **Train과 Test시 동일하게 동작**한다.
+
+## Group Normalization
+
+> **Channel 차원을 여러 그룹으로 나누고, 그룹마다 평균 / 표준편차를 구하는 방법**
+
+## Comparision of Normalization Layers
+
+![alt text](image-243.png)
