New files added

--- a/Machigan - [EECS 498-007, 598-005]/08. CNN Architectures.md
+++ b/Machigan - [EECS 498-007, 598-005]/08. CNN Architectures.md
@@ -312,3 +312,240 @@ ___
 **Question) 2014년에 Batch Normalization이 없었다면 VGG는 어떻게 Training?**
 
 - `VGG` 역시 **어떤 Trick**을 사용해서 학습이 가능하도록 만든 것이고, **`Batch Normalization`은 사용하지 않았다.**
+
+이후, 2014 ~ 2015년 사이에 `Batch Normalization`이 등장하였다.
+
+# ResNet
+
+> **기존 Network에 비해 압도적으로 많은 Layer를 사용한 모델**
+
+`ResNet`은 여러 `Residual Block`의 겹침으로 이루어져 있다.
+
+![alt text](image-281.png)
+
+`ResNet`은 `VGG`와 `GoogLeNet`의 장점을 모아놓았다.
+
+- `VGG`와 유사하게 **3 x 3 Filter**만을 사용하였다.
+
+- `GoogLeNet`과 비슷하게 `Network`의 첫 번째 `Layer`에서 빠르게 `Downsampling`하였고, `Channel`의 수를 2배 늘렸으며 마지막 `Layer`에서는 `Global Averaging Pooling`을 사용하였다.
+
+- `Network`를 `stage`로 나누었다.
+  
+![alt text](image-282.png)
+
+- `GoogLeNet`과 비슷하게 빠르게 `Downsampling`한 것을 확인할 수 있다.
+
+
+### Residual Network
+
+#### 기존 모델의 문제점
+
+`Batch Normalization`이 등장하고, **더 깊은 모델의 학습**이 가능해짐에 따라, 연구가 진행되었다.
+
+이때, `Deeper Model`은 `Shallow Modle`에 비해 좋은 성능을 내야함에도 불구하고, **더 좋지 않은 성능을 보이는 경우**가 있다는 것이 발견되었다.
+
+![alt text](image-279.png)
+
+이러한 문제에 대한 **첫 번째 가정**은 **모델이 깊어짐에 따라, 모델이 `Overfitting`되었다는** 것이다.
+
+![alt text](image-278.png)
+
+하지만 위 그림에서 확인할 수 있듯이, Model이 `Underfitting`인 상태에서도 **`Deeper Model`이 좋지 않은 성능을 내는 경우**가 있었다.
+
+일반적으로는 `Deeper Model`은 `Shallow Model`을 **Emulate**할 수 있어야 한다.
+
+- `Shallow Model`을 그대로 복사하고, 연결되는 부분의 `Layer`는 `Identity Function`을 사용하면 되기 때문이다.
+
+- 따라서, 일반적으로 `Shallow Model`의 성능은 `Deeper Model`보다 좋아야 한다.
+
+즉, **`Batch Normalization` 이후에도 매우 깊은 모델은 효율적으로 최적화되지 못 한다는 것을 의미**한다.
+
+- 단순히 `Identity function`만을 학습하면 되는 상황에서도, **`Deeper Model`은 학습 자체가 어려워서 더 낮은 성능을 갖는다.** 
+
+#### 해결책
+
+> **Identity function을 더 쉽게 학습할 수 있도록 만들자**
+
+![alt text](image-280.png)
+
+`Residual Block`은 기존 Block에 `Shortcut`을 추가한다.
+
+- $X$는 학습되지 않고, 단순히 학습되는 함수 $F(X)$에 더해지는 것이다.
+
+이 방법은 `Identity function`의 학습을 쉽게 만든다.
+
+- 만약 2개의 `Conv Layer`의 `Weight`가 모두 0이라면, `Identity function`을 사용하는 것과 동일하게 된다.
+
+- 기존 모델은 $H(x)$가 `Identity function`이 되도록 유도해야 했지만, `ResNet`은 학습하는 대신, `F(x) = 0`이 되도록 하면 된다.
+
+추가로 `Backpropagation` 시에 `Gradient`가 전달되는 하나의 경로를 추가적으로 만들어, 학습을 효율적으로 만든다.
+
+- 추가적인 `Gradient`를 사용하여 `Vanishing Gradient` 문제를 해결할 수 있다.
+
+#### Basic Residual Block
+
+**가장 기본적으로 사용되는 `Residual Block`**
+
+![alt text](image-284.png)
+
+#### Bottleneck Block
+
+`Basic Residual Block`에 비해 4배 큰 `Channel input`을 허용한 `Residual Block`
+
+![alt text](image-285.png)
+
+- **가장 큰 특징은 Layer가 더 많은데도 계산량은 더 적다는 것이다.**
+
+- 즉, **계산량을 유지하**며 더 많은 **비선형성 부여**와 **순차적인 계산**이 가능하도록 하여 **더 복잡한 함수의 표현이 가능하도록 한다.**
+
+### Structure
+
+`Layer`의 개수에 따라 2개의 버전이 존재한다.
+
+![alt text](image-283.png)
+
+- `Floating Point Operation`의 횟수가 굉장히 적어 `ImageNet`에서 오류가 적다.
+
+`VGG`와 비교했을 때, `GFLOP`이 훨씬 낮은 것을 확인할 수가 있다.
+
+### Results
+
+![alt text](image-286.png)
+
+- `ResNet-50`은 `ResNet-34`와 `Residual Block` 종류 차이만 존재하는 모델이다. `Bottleneck`을 사용하는 경우가 에러가 더 적은 것을 확인할 수 있다.
+
+`ResNet-101`과 `ResNet-152` 모델은 더 깊은 모델이라 `Computationally Heavy` 하지만, 에러는 더 적은 것을 확인할 수 있다.
+
+![alt text](image-287.png)
+
+`Computer Vision` 역사에서 가장 강력한 결과를 낸 모델 중 하나이다.
+
+> 기존 모델들의 장점을 엮어 **`152개`의 압도적인 개수의 Layer를 가진 `Deeper Model`을 구현했다는 점이 중요하다.**
+
+# Comparing Complexity
+
+> **`AlexNet`부터 `ResNet`까지의 모델의 성능들을 비교해보자**
+
+![alt text](image-289.png)
+
+- `Inception-V4`는 `Inception` + `Residual Block`으로 구성된다.
+
+![alt text](image-288.png)
+
+- `AlexNet`: Low Compute, lots of parameter
+
+- `VGG`: Highest Memory, Most operation
+
+- `GoogLeNet`: Very Efficient
+
+- `ResNet`: Simple design,	Moderate efficiency, High accuracy
+
+# Model	Ensembles (2016)
+
+> **2016년의 ILSVRC 우승 모델은 기존의 모델들을 `Ensemble`한 모델이다**
+
+![alt text](image-290.png)
+
+
+# ResNeXt (2017)
+
+> **`ResNet`의 `Bottleneck Residual Block`을 보완한 모델**
+
+`ResNet`의 `Bottleneck Conv layer` 부분을 **병렬로 처리해보려는 시도에서 생긴 모델**
+
+![alt text](image-291.png)
+
+- 왼쪽의 `Bottleneck Residual Block`을 오른쪽의 `G`개의 **parallel**한 작은 `Bottleneck Residual Block`으로 나눌 수 있다.
+
+- 아래 보이는 방정식을 풀어서 `c` (Small c)를 구하면 **계산량을 변하지 않게 하면서 더 빠르게 계산할 수 있도록 할 수 있다.**
+
+![alt text](image-295.png)
+
+- `Group` 전체에 대한 `Identity function`을 넘겨준다.
+
+### Example: Groups = G
+
+![alt text](image-293.png)
+
+### Example: PyTorch
+
+![alt text](image-294.png)
+
+### Results
+
+`ResNeXt`가 `ResNet`에 비해 성능이 더 좋은 것을 확인할 수 있다.
+
+![alt text](image-296.png)
+
+`ResNet`은 `Residual Block`을 이용하면 **`Deeper Model`이 `Shallow Model`보다 항상 좋다는 것을 증명했다.**
+
+이는 후속 연구가 **Deep한 모델**을 만들고자 하는 방향성을 갖도록 했다.
+
+하지만, 모델의 `Layer`가 많을수록 `GPU Memory`에 의해 제한되는 부분도 있었다.
+
+____
+
+`2017`년 이후, `ImageNet Classification Challenge`는 종료되었다.
+
+`ImageNet Classification Challenge`의 과정을 시각화해보면 아래와 같다.
+
+![alt text](image-301.png)
+
+하지만 이후에도 흥미로운 `Architecture`는 계속 나왔기 때문에 이를 살펴보자.
+
+# Densely Connected Neural Network
+
+> **직전 `Layer`에 해당하는 결과만 받는 대신, 모든 이전 `Layer`의 결과를 넘겨받는 모델**
+
+**각 `Layer`는 이전의 모든 `Layer`로부터 feature map을 입력받고, 자신의 출력을 이후의 모든 `Layer`에 전달한다.**
+
+![alt text](image-297.png)
+
+- 이전 Layer에서의 **`Feature`를 재사용**할 수 있다.
+
+- `Vanishing Gradient`를 제거할 수 있다.
+
+- `Feature`들이 다음 `Layer`로 잘 전달된다.
+
+
+# MobileNets: Tiny Networks (For mobile devices)
+
+> **정확도를 어느정도 희생하고 모바일에서도 실행할 수 있도록 매우 적은 연산량을 가진 모델**
+
+![alt text](image-298.png)
+
+# Neural Architecture Search
+
+> **위에서 본 모든 모델은 모델 자체를 설계하는데 시간, 돈, 인력이 소모된다. `Neural Architecture Search`은 이를 해결하기 위한 방법 중 하나이다.**
+
+> **Deep Learning 구조도 Deep Learning 모델이 자동으로 설계하자!**
+
+`Controller Neural Network`는 `Output`으로 다른 `Neural Network`를 내놓는다.
+
+![alt text](image-299.png)
+
+### 학습 과정
+
+1. **모델의 구조를 Sampling**하여 얻고, 그에 따라 `Child Neural Network`를 구성한다.
+
+2. `Child Neural Network`를 학습시켜서 `Reward (정확도)`를 얻고, `Reward`에 맞춰서 `Gradient`를 계산한다.
+
+3. 위에서 구한 `Gradient(Policy Gradient)`를 이용하여 `Child`가 아니라 `Controller`를 업데이트 한다.
+
+이 과정이 반복되면서 `Controller`는 점점 좋은 모델을 구성해나간다.
+
+### 문제점
+
+**학습하는데 너무 오랜 시간이 걸려 거의 사용하지 못 한다..**
+
+### Results
+
+![alt text](image-300.png)
+
+- `Neural Architecture Search`를 이용하여 얻은 `Architecture`는 다른 `CNN Architecture`에 비해 **더 적은 계산량으로 더 좋은 성능**을 낸다.
+
+# CNN Architecture Summary
+
+![alt text](image-302.png)
+
+마지막으로, 일반적으로 우수한 `Architecture`를 직접 설계하고자 하는 것은 말도 안 되고, **기존 `Architecture`를 상황, 데이터에 맞게 조절하여 사용하는게 좋다.**
