Update 02. Image Classification.md

--- a/Machigan - [EECS 498-007, 598-005]/02. Image Classification.md
+++ b/Machigan - [EECS 498-007, 598-005]/02. Image Classification.md
@@ -297,7 +297,7 @@ class NearestNeighbor:
 
 예시로는 32 x 32 image에서 전체 pixel의 가능한 경우의 수는 `binary image`라고 가정해도 $2^{32*32}$ 이다. 
 
-`Training` 에서는 위 이미지를 32*32 차원의 벡터로 인식하기 때문에 `Curse of Dimensionality` 를 피하기 위해선 $2^{32*32}$ 개의 데이터가 필요하다.
+`Training` 에서는 위 이미지를 **32*32 차원의 벡터**로 인식하기 때문에 `Curse of Dimensionality` 를 피하기 위해선 $2^{32*32}$개의 데이터가 필요하다.
 
 32*32 image는 비교적 작은 데도 불구하고, 많은 양의 데이터가 필요하다.
 
