New files added

--- a/Machigan - [EECS 498-007, 598-005]/10. Training Neural Networks 1.md
+++ b/Machigan - [EECS 498-007, 598-005]/10. Training Neural Networks 1.md
@@ -25,6 +25,8 @@ ___
 
 **10강**에서는 우선 `SetUp` 단계만 살펴볼 것이다.
 
+나머지 두 단계는 **11강**에서 배울 것이다.
+
 # Activation function
 
 > **입력을 받아 비선형성을 부여하며 다음 층에 전달 할 수 있도록 해주는 단계**
